# poflow

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  check.sh  docker-compose.yml  install.sh
.github/workflows/: ci.yml  release.yml
assets/: poflow.desktop  poflow.service  pomodoro-indicator.desktop  pomodoro.desktop  pomodoro.service
crates/poflow-cli/: Cargo.toml
crates/poflow-cli/src/: main.rs
crates/poflow-daemon/: Cargo.toml
crates/poflow-daemon/src/: auth.rs  automation.rs  config.rs  email.rs  engine.rs  lib.rs  main.rs  notify.rs  webhook.rs
crates/poflow-daemon/src/db/: assignees.rs  attachments.rs  audit.rs  burns.rs  checklists.rs  comments.rs  custom_fields.rs  custom_statuses.rs  dependencies.rs  epics.rs  labels.rs  mod.rs  notifications.rs  projects.rs  recurrence.rs  rooms.rs  saved_views.rs  sessions.rs  sprints.rs  status_transitions.rs  tasks.rs  teams.rs  templates.rs  timer_states.rs  types.rs  users.rs  watchers.rs  webhook_deliveries.rs  webhooks.rs
crates/poflow-daemon/src/routes/: admin.rs  assignees.rs  attachments.rs  audit.rs  auth_routes.rs  burns.rs  burns_task.rs  checklists.rs  comments.rs  config.rs  custom_fields.rs  custom_statuses.rs  dependencies.rs  epics.rs  export.rs  history.rs  labels.rs  misc.rs  mod.rs  notifications.rs  profile.rs  projects.rs  recurrence.rs  rooms.rs  saved_views.rs  sprints.rs  status_transitions.rs  tasks.rs  teams.rs  templates.rs  timer.rs  types.rs  watchers.rs  webhooks.rs
crates/poflow-daemon/tests/: admin_tests.rs  api_tests.rs  attachment_tests.rs  audit_tests.rs  auth_tests.rs  burn_tests.rs  comment_tests.rs  config_tests.rs  dependency_tests.rs  epic_tests.rs  export_import_tests.rs  flow_scenario_tests.rs  flow_tests.rs  label_tests.rs  misc_tests.rs  recurrence_tests.rs  room_tests.rs  sprint_tests.rs  task_tests.rs  team_tests.rs  template_tests.rs  timer_tests.rs  webhook_tests.rs
crates/poflow-daemon/tests/common/: mod.rs
crates/pomodoro-cli/: Cargo.toml
crates/pomodoro-cli/src/: main.rs
crates/pomodoro-daemon/: Cargo.toml
crates/pomodoro-daemon/src/: auth.rs  automation.rs  config.rs  db.rs  email.rs  engine.rs  lib.rs  main.rs  notify.rs  routes.rs  webhook.rs
crates/pomodoro-daemon/src/db/: assignees.rs  attachments.rs  audit.rs  burns.rs  checklists.rs  comments.rs  custom_fields.rs  dependencies.rs  epics.rs  labels.rs  mod.rs  notifications.rs  recurrence.rs  rooms.rs  sessions.rs  sprints.rs  tasks.rs  teams.rs  templates.rs  types.rs  users.rs  watchers.rs  webhook_deliveries.rs  webhooks.rs
crates/pomodoro-daemon/src/routes/: admin.rs  assignees.rs  attachments.rs  audit.rs  auth_routes.rs  burns.rs  burns_task.rs  comments.rs  config.rs  custom_fields.rs  custom_statuses.rs  dependencies.rs  epics.rs  export.rs  history.rs  labels.rs  misc.rs  mod.rs  notifications.rs  profile.rs  projects.rs  recurrence.rs  rooms.rs  saved_views.rs  sprints.rs  tasks.rs  teams.rs  templates.rs  timer.rs  types.rs  watchers.rs  webhooks.rs
crates/pomodoro-daemon/tests/: api_tests.rs  flow_tests.rs
crates/pomodoro-daemon/tests/common/: mod.rs
docs/: API_CHANGELOG.md  ARCHITECTURE.md  BACKLOG_V10.md  BACKLOG_V12.md  BACKLOG_V13.md  BACKLOG_V15.md  BACKLOG_V16.md  BACKLOG_V17.md  BACKLOG_V18.md  BACKLOG_V19.md  BACKLOG_V20.md  BACKLOG_V21.md  BACKLOG_V22.md  BACKLOG_V23.md  BACKLOG_V24.md  BACKLOG_V26.md  BACKLOG_V29.md  BACKLOG_V30.md  BACKLOG_V31.md  BACKLOG_V32.md  BACKLOG_V33.md  BACKLOG_V34.md  BACKLOG_V35.md  BACKLOG_V37.md  BACKLOG_V38.md  BACKLOG_V4.md  BACKLOG_V40.md  BACKLOG_V41.md  BACKLOG_V42.md  BACKLOG_V44.md  BACKLOG_V45.md  BACKLOG_V46.md  BACKLOG_V47.md  BACKLOG_V49.md  BACKLOG_V5.md  BACKLOG_V50.md  BACKLOG_V6.md  BACKLOG_V7.md  BACKLOG_V8.md  BACKLOG_V9.md  (+11 more)
e2etests/: README.md  conftest.py  harness.py  helpers.py  run_e2e.sh  test_admin.py  test_api_contracts.py  test_auth_matrix.py  test_comments.py  test_coverage_gaps.py  test_dashboard.py  test_dependencies.py  test_edge_cases.py  test_endpoints_exhaustive.py  test_epics.py  test_features.py  test_flows.py  test_idempotency.py  test_input_validation.py  test_labels.py  test_leaf_only.py  test_misc.py  test_openapi.py  test_pagination.py  test_performance.py  test_regressions.py  test_room_voting.py  test_search.py  test_security.py  test_settings.py  test_sprint_lifecycle.py  test_task_crud.py  test_websocket.py  test_workflow_scenarios.py
flows/: access-token-expires-while-logged-in.md  admin-backup-restore.md  attachments.md  gui-auth-restore-on-startup.md  initial-root-user-seeding.md  jwt-secret-regeneration.md  jwt-token-validation.md  multi-server-switching.md  pomodoro-timer-session.md  user-login.md  user-logout.md  user-registration.md  user-relogs-after-long-absence.md
gui/: index.html  package-lock.json  package.json  vite.config.ts
gui/public/: manifest.json  sw.js
gui/src/: App.css  App.tsx  constants.ts  i18n.ts  index.css  main.tsx  offlineStore.ts  platform.ts  rollup.ts  tree.ts  utils.ts
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/src/: lib.rs
gui/src/__tests__/: AuthScreen.test.tsx  Dashboard.test.tsx  Settings.test.tsx  (+9 more)
packaging/: config.toml
packaging/debian/: postinst
tests/flows/: conftest.py  harness.py
tickets/: password-placeholder-wrong.md
tools/: panel-indicator.py
(+52 files in other folders)
