[package]
name = "poflow-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "poflow-daemon"
path = "src/main.rs"

[lib]
name = "poflow_daemon"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
notify-rust = "4"
axum = { version = "0.8", features = ["json", "ws"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"], optional = true }
bcrypt = "0.17"
jsonwebtoken = "9"
async-stream = "0.3"
futures = "0.3"
reqwest = { workspace = true }
url = "2"
sha2 = "0.11.0"
hmac = "0.13.0"
hex = "0.4"
aes-gcm = "0.10"
parking_lot = "0.12"
tokio-util = { version = "0.7", features = ["io"] }
getrandom = "0.4.2"
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder", "smtp-transport"], optional = true }

[features]
default = ["swagger", "email"]
swagger = ["dep:utoipa-swagger-ui"]
email = ["dep:lettre"]

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
hyper = "1"

[package.metadata.deb]
maintainer = "Yunus Emre Ayhan <yunus.ayhan@ericsson.com>"
copyright = "2026, Yunus Emre Ayhan"
license-file = ["../../LICENSE", "0"]
extended-description = "Production-grade Poflow timer and project management platform. 207 API endpoints, Tauri desktop GUI, web GUI (PWA), hierarchical tasks, sprint planning, Gantt charts, custom workflows, RBAC, and time tracking."
section = "utils"
priority = "optional"
depends = "$auto"
assets = [
    ["target/release/poflow-daemon", "usr/bin/", "755"],
    ["../../assets/poflow.service", "usr/lib/systemd/user/poflow.service", "644"],
    ["../../assets/poflow.desktop", "usr/share/applications/poflow.desktop", "644"],
    ["../../gui/dist/*", "usr/share/poflow/gui/", "644"],
    ["../../gui/dist/assets/*", "usr/share/poflow/gui/assets/", "644"],
]
conf-files = ["/etc/poflow/config.toml"]
