[package]
name = "pomodoro-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pomo"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json"] }
